# sacred-memory

./: .gitignore  Cargo.toml  sacred-codex-memory-architecture.excalidraw
.beads/: metadata.json
prototypes/rust-harness/: Cargo.toml
prototypes/rust-harness/src/: main.rs
prototypes/ts-harness/: package-lock.json  package.json
prototypes/ts-harness/src/: mh.ts
sacred-codex-pack/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md
sacred-codex-pack/.gemini/: system.md
sacred-codex-pack/diagrams/: sacred-codex-memory-architecture.excalidraw
sacred-codex-pack/docs/: canon-model.md  promotion-workflow.md  security-boundaries.md  session-lifecycle.md
sacred-codex-pack/mcp/: resources.md  tools.md
sacred-codex-pack/policies/: promotion-policy.yaml  retrieval-policy.yaml  trust-tiers.yaml
sacred-codex-pack/schemas/: canon-entry.schema.json  memory-item.schema.json  reflection-candidate.schema.json  session-payload.schema.json
src/engine/: canon_vault.rs  main.rs
src/gateway-mcp/: package-lock.json  package.json  server.ts  tsconfig.json
src/hooks/: post-session.sh  pre-session.sh
